--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -2,7 +2,17 @@
   "auth": {
     "reactamplifiedbba6148d": {
       "customAuth": false,
-      "dependsOn": [],
+      "dependsOn": [
+        {
+          "attributes": [
+            "Arn",
+            "Name"
+          ],
+          "category": "function",
+          "resourceName": "reactamplifiedbba6148dPostConfirmation",
+          "triggerProvider": "Cognito"
+        }
+      ],
       "frontendAuthConfig": {
         "mfaConfiguration": "OFF",
         "mfaTypes": [
@@ -25,6 +35,39 @@
       },
       "providerPlugin": "awscloudformation",
       "service": "Cognito"
+    }
+  },
+  "function": {
+    "reactamplifiedbba6148dPostConfirmation": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    }
+  },
+  "parameters": {
+    "AMPLIFY_function_reactamplifiedbba6148dPostConfirmation_GROUP": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "reactamplifiedbba6148dPostConfirmation"
+        }
+      ]
+    },
+    "AMPLIFY_function_reactamplifiedbba6148dPostConfirmation_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "reactamplifiedbba6148dPostConfirmation"
+        }
+      ]
+    },
+    "AMPLIFY_function_reactamplifiedbba6148dPostConfirmation_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "reactamplifiedbba6148dPostConfirmation"
+        }
+      ]
     }
   }
 }
