--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/cli": "^12.0.0-ym-tagged-release.0",
-    "@aws-amplify/ui-react": "^5.0.6",
+    "@aws-amplify/ui": "^5.7.0",
+    "@aws-amplify/ui-react": "^5.1.0",
+    "@aws-sdk/client-sns": "^3.387.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "aws-amplify": "^5.3.5",
+    "aws-amplify": "^5.3.7",
+    "aws-amplify-react-native": "^7.0.3",
+    "aws-sdk": "^2.1432.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-responsive": "^9.0.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
