--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "PUBLIC_URL=/wp-content/reactpress/apps/react-amplified/build react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
